commit tasks1&task3 code refactoring 2016.12.8

--- a/task1/task1.html
+++ b/task1/task1.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
 <style type="text/css">
-
-.table-column
+.wrap
 {
-	padding: 6px;
-	margin: 6px;
-	width: 600px;
-	height: auto;
-	float: left ;
+	width: 500px;
+    margin: 100px auto 0 auto;
 }
 .orange-square
 {
-padding:6px;
-margin: 6px;
-width:150PX;
-height:150PX;
-background-color:rgb(232,131,13);
+margin: 5px;
+width:150px;
+height:150px;
+background-color:#E8830D;
 border-radius: 6px;
 float: left; 
 }
@@ -25,16 +21,13 @@ float: left;
 <title>task1</title>
 </head>
 <body>
-<div class="table-column">
+<div class="wrap">
 <div class="orange-square"></div>
 <div class="orange-square"></div>
 <div class="orange-square"></div>
-
 <div class="orange-square"></div>
 <div class="orange-square"></div>
 <div class="orange-square"></div>
-
-
 <div class="orange-square"></div>
 <div class="orange-square"></div>
 <div class="orange-square"></div>
