commit css task code refactoring 2016.12.8

--- a/task5/task5-2.html
+++ b/task5/task5-2.html
@@ -1,172 +1,172 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="task5-2.css">
-  <title>找护工</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/task5-2.css">
+    <title>找护工</title>
 </head>
 
 <body>
-  <header class="header-table">
+<header class="header-table">
     <div class="header-tablecell">
-      <span class=" fs-34px color2">找雇主</span><span class=" mf fs-34px color1">招护工</span>
+        <span class=" fs-34px color2">找雇主</span><span class=" mf fs-34px color1">招护工</span>
     </div>
     <div class="header-tablecell-absoutle">
-      <div  class="icon"></div>
+        <div class="icon"></div>
     </div>
-  </header>
+</header>
 <form>
-  <select class="select1" name="所在地">
-    <option value="所在地">所在地</option>
-  </select><select class="select2" name="食宿"
-  >
-  <option value="测试" >食宿</option>
-  </select><select class="select3" name="病人情况"
-  >
+    <select class="select1" name="所在地">
+        <option value="所在地">所在地</option>
+    </select><select class="select2" name="食宿"
+>
+    <option value="测试">食宿</option>
+</select><select class="select3" name="病人情况"
+>
     <option value="测试">病人情况</option>
-  </select>
+</select>
 </form>
 <div class="warp">
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
   </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
 </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
   </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
   </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
   </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 
-<div class="container">
-<p>
-  <img src="images/calendar2.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-28px">服务日期</span>
-</p>
-<p>
-  <img src="images/calendar2.png" style="opacity:0">
-  &nbsp&nbsp&nbsp
-  <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
-  <span class="fl col3 fs-30px">25元/小时
-  <a href="task5.html"><img src="images/icon1.png"></a>
+    <div class="container">
+        <p>
+            <img src="images/calendar2.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-28px">服务日期</span>
+        </p>
+        <p>
+            <img src="images/calendar2.png" style="opacity:0">
+            &nbsp&nbsp&nbsp
+            <span class="col2 fs-28px">2015-7-5至2015-7-12</span>
+            <span class="fl col3 fs-30px">25元/小时
+  <a href="task5-1.html"><img src="images/icon1.png"></a>
   </span>
-</p>
-<p>
-<img src="images/Shape4.png">
-  &nbsp&nbsp&nbsp
-  <span class="col1 fs-26px">北京.通州.果园</span>
-</p>
-</div>
+        </p>
+        <p>
+            <img src="images/Shape4.png">
+            &nbsp&nbsp&nbsp
+            <span class="col1 fs-26px">北京.通州.果园</span>
+        </p>
+    </div>
 </div>
 
 <footer>
-<div class="float1">
-  <img  class="img" src="images/形状 4.png">
-  <p class="fs-20px margin" style="color: rgb(95,192,205)">首页</p>
-  </div>
-  <div class="bg-circle">
-  <div class="bg-circle-icon"></div>
-  </div>
-  <div class="float2 ">
-  <img class="img" src="images/icon-user.png">
-  <p  class="fs-20px col1 margin">我的</p>
-  </div>
+    <div class="float1">
+        <img class="img" src="images/形状 4.png">
+        <p class="fs-20px margin" style="color: rgb(95,192,205)">首页</p>
+    </div>
+    <div class="bg-circle">
+        <div class="bg-circle-icon"></div>
+    </div>
+    <div class="float2 ">
+        <img class="img" src="images/icon-user.png">
+        <p class="fs-20px col1 margin">我的</p>
+    </div>
 </footer>
 </body>
 </html>
