commit css task code refactoring 2016.12.8

--- a/task1/task1.html
+++ b/task1/task1.html
@@ -2,35 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<style type="text/css">
-.wrap
-{
-	width: 500px;
-    margin: 100px auto 0 auto;
-}
-.orange-square
-{
-margin: 5px;
-width:150px;
-height:150px;
-background-color:#E8830D;
-border-radius: 6px;
-float: left; 
-}
-</style>
-<title>task1</title>
+    <style type="text/css">
+        .wrap {
+            width: 500px;
+            margin: 100px auto 0 auto;
+        }
+
+        .orange-square {
+            margin: 5px;
+            width: 150px;
+            height: 150px;
+            background-color: #E8830D;
+            border-radius: 6px;
+            float: left;
+        }
+    </style>
+    <title>task1</title>
 </head>
 <body>
 <div class="wrap">
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
-<div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
+    <div class="orange-square"></div>
 </div>
 </body>
 </html>
