--- a/task10/task10-2.html
+++ b/task10/task10-2.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="css/task10-2.css">
 
 <link rel="stylesheet" type="text/css" href="css/banner-footer.css">
-  <title>首页</title>
+  <title>task10-2 职业</title>
 </head>
 
 <body>
@@ -51,9 +51,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right header2-1">
-        <li><a href="#"><span>首页</span></a></li>
-        <li><a href="#"><span>职业</span></a></li>
-        <li><a href="#"><span>推荐</span></a></li>
+          <li><a href="task10-1.html"><span>首页</span></a></li>
+          <li><a href="task10-2.html"><span>职业</span></a></li>
+          <li><a href="../task11/task11.html"><span>推荐</span></a></li>
         <li><a href="#"><span >关于</span></a></li>
       </ul>
 
