--- a/task6/task6-1.html
+++ b/task6/task6-1.html
@@ -158,12 +158,12 @@
             </ul>
         </div>
     </div>
-    <footer style="position: static">
-        <a href="task6-2.html">
-            <div class="footer">投死</div>
-        </a>
-    </footer>
 </div>
+<footer style="position: static; border-top: none">
+    <a href="task6-2.html">
+        <div class="footer">投死</div>
+    </a>
+</footer>
 
 <footer>
     <a href="task6-2.html">
