上传代码js-task1/task2

--- a/js-task2/js-task2.html
+++ b/js-task2/js-task2.html
@@ -14,25 +14,31 @@
 <div class="play">
     <div class="title">玩家配比</div>
     <ul class="assign">
-        <li>杀  手<span>1</span>人</li>
-        <li>医  生<span>1</span>人</li>
-        <li>阻击手<span>1</span>人</li>
-        <li>警  察<span>1</span>人</li>
+        <li><span></span>杀&nbsp&nbsp手 <span>1</span> 人</li>
+        <li><span></span>杀&nbsp&nbsp手 <span>1</span> 人</li>
+        <li><span></span>医&nbsp&nbsp生 <span>1</span> 人</li>
+        <li><span></span>医&nbsp&nbsp生 <span>1</span> 人</li>
+        <li><span></span>阻击手 <span>1</span> 人</li>
+        <li><span></span>阻击手 <span>1</span> 人</li>
+        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
+        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
+        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
+        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
     </ul>
-    <p><span>点击设置</span><img src="images/pencil.png"></p>
+    <button>点击设置 <img src="images/pencil.png"></button>
 </div>
 
-<div>
-    <input>
-    <input>
+<div class="background1">
+    <input type="text" maxlength="10" placeholder="水民词组">
+    <input type="text" maxlength="10" placeholder="幽灵词组">
 </div>
 
-<div>
-    <p>玩家人数<span>18</span>人</p>
+<div class="background1">
+    <p>玩家人数 <span>18</span> 人</p>
     <div>
-        <span></span>
-        <img src="images/slider.png">
-        <span></span>
+        <span class="minus"><i></i></span>
+        <input type="range"  min="9" max="17" step="1"/>
+        <span class="plus" ><i></i></span>
     </div>
 </div>
 <button>去发牌</button>
