--- a/js-task2/js-task2.html
+++ b/js-task2/js-task2.html
@@ -17,18 +17,15 @@
 <div class="play">
     <div class="title">玩家配比</div>
     <ul class="assign">
-        <li><span></span>杀&nbsp&nbsp手 <span>1</span> 人</li>
-        <li><span></span>杀&nbsp&nbsp手 <span>1</span> 人</li>
-        <li><span></span>医&nbsp&nbsp生 <span>1</span> 人</li>
-        <li><span></span>医&nbsp&nbsp生 <span>1</span> 人</li>
-        <li><span></span>阻击手 <span>1</span> 人</li>
-        <li><span></span>阻击手 <span>1</span> 人</li>
-        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
-        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
-        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
-        <li><span></span>警&nbsp&nbsp察 <span>1</span> 人</li>
+        <li><span></span>杀&nbsp&nbsp手 <span id="role1-num">?</span> 人</li>
+        <div id="x1"></div>
+
+
+
+        <li><span></span>平&nbsp&nbsp民 <span id="role2-num">?</span> 人</li>
+        <div id="y1"></div>
     </ul>
-    <button>点击设置 <img src="images/pencil.png"></button>
+    <button id="btn1">点击设置 <img src="images/pencil.png"></button>
 </div>
 
 <div class="background1">
@@ -54,7 +51,7 @@
         <span  id="add" class="plus" ><i></i></span>
     </div>
 </div>
-<button class="btn1" id="btn1">去发牌</button>
+<button class="btn1" id="btn2">去发牌</button>
 </div>
 </body>
 <script type="text/javascript" src="js/js-task2.js"></script>
