--- a/hsh/hsh.html
+++ b/hsh/hsh.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-
-
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Home - HSH Design Studio</title>
+    <title>Home - HSH Design Studio</title>
 
 <link rel="stylesheet" id="Template Main-css" href="css/main.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/demo.css">
@@ -48,10 +46,6 @@
       <div class="header-bg" style="background-color: rgb(38, 41, 48);"></div>
     </div>
 
-
-
-
-
 <section class="page-section page-section--hero page-section--landing js-layered-parallax" data-nav-subsection="0" data-nav-title="Home" style="touch-action: pan-y; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
 
   <div class="page-section-content with-link container slideup">
@@ -60,6 +54,7 @@
         <h3 class="headline-sub headline-sub--thin headline-contra--dark"><strong>FOUR32C</strong> is an independent digital design studio in New York City. We're curious digital natives who bring creativity and intelligence to the world's most beloved brands.</h3>
 
 <h1 class="icon_lists clear  headline-sub2 ">
+    <span style="font-size: 35px; line-height: 40px;color: white;padding-right: 20px;">CSS</span>
        <a href="../task1/task1.html" target="_Blank"><i class="icon iconfont">&#xe600;</i></a>
       <a href="hsh.html" target="_Blank"><i class="icon iconfont">&#xe608;</i></a>
       <a href="../task3/task3.html" target="_Blank"><i class="icon iconfont">&#xe601;</i></a>
@@ -74,7 +69,21 @@
       <a href="../task12/task12.html" target="_Blank"><i class="icon iconfont">&#xe60c;</i></a>
 </h1>
 
-
+      <h1 class="icon_lists clear  headline-sub2 ">
+          <span style="font-size: 35px; line-height: 40px;color: white; padding-right: 45px;">JS</span>
+          <a href="../js-task1/js-task1.html" target="_Blank"><i class="icon iconfont">&#xe600;</i></a>
+          <a href="../js-task2/js-task2.html" target="_Blank"><i class="icon iconfont">&#xe608;</i></a>
+          <a href="../js-task3/js-task3.html" target="_Blank"><i class="icon iconfont">&#xe601;</i></a>
+          <a href="../js-task4/js-task4-1.html" target="_Blank"><i class="icon iconfont">&#xe602;</i></a>
+          <a href="../task5/task5-1.html" target="_Blank"><i class="icon iconfont">&#xe605;</i></a>
+          <a href="../task6/task6-3.html" target="_Blank"><i class="icon iconfont">&#xe609;</i></a>
+          <a href="../task7/task7-1.html" target="_Blank"><i class="icon iconfont">&#xe60a;</i></a>
+          <a href="../task8/task8.html" target="_Blank"><i class="icon iconfont">&#xe604;</i></a>
+          <a href="../task9/task9.html" target="_Blank"><i class="icon iconfont">&#xe607;</i></a>
+          <a href="../task10/task10-1.html" target="_Blank"><i class="icon iconfont">&#xe606;</i></a>
+          <a href="../task11/task11.html" target="_Blank"><i class="icon iconfont">&#xe60b;</i></a>
+          <a href="../task12/task12.html" target="_Blank"><i class="icon iconfont">&#xe60c;</i></a>
+      </h1>
     </div>
 
 
