--- a/js-task1/js-task1.html
+++ b/js-task1/js-task1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
     <style type="text/css">
         #wrap {
             width: 500px;
