--- a/js-task4/js-task4-5.html
+++ b/js-task4/js-task4-5.html
@@ -18,21 +18,18 @@
     <div class="circle">
         <div class="triangle-right"></div>
     </div>
-    <div class="cry"></div>
-    <p class="death-note">
-        <span>7号被杀手杀死了，真实身份是水民</span>
-        <br>
-        <span>5号被医生扎死了，真实身份是水民</span>
-        <br>
-        <span>3号被狙击狙死了，真实身份是水民</span>
-        <br>
+    <div id="cry" class="cry"></div>
+    <p id="death-note">
+        <!--<span>7号被杀手杀死了，真实身份是水民</span>-->
     </p>
+    <div id="change">
     <p class="last-words">亡灵发表遗言</p>
     <img src="images/arrow.png" class="arrow">
     <p class="last-words">玩家依次发言讨论</p>
     <img src="images/arrow.png" class="arrow">
-    <button id="btn1">查看1号身份</button>
-
+    </div>
+    <button id="btn1">去投票</button>
+<script type="text/javascript" src="js/js-task4-5.js"></script>
 </div>
 </body>
 </html>
