--- a/js-task4/js-task4-1.html
+++ b/js-task4/js-task4-1.html
@@ -17,27 +17,14 @@
         <img src="images/close.png">
     </header>
     <div class="container">
-   <ul>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-       <li>1号</li>
-
+   <ul id="player">
    </ul>
         <div class="btn">
-<button>开始游戏</button>
+<button id="btn" onclick="next()">开始游戏</button>
         </div>
 
     </div>
-
+    <script  type="text/javascript" src="js/js-task4-1.js"></script>
 
 </body>
 </html>
