--- a/js-task4/js-task4-2.html
+++ b/js-task4/js-task4-2.html
@@ -17,7 +17,7 @@
 
 <div class="background">
  <div class="main">
-     <p>第一天 <img src="images/down.png"></p>
+     <p >第<span id="day">1</span>天 <img src="images/down.png"></p>
      <div class="sidebar">
          <span class="string1"></span>
          <span class="moon"></span>
@@ -27,7 +27,7 @@
          <span></span>
      </div>
      <ul class="night">
-         <li>杀手杀人</li>
+         <li onclick="location.href='js-task4-3.html'">杀手杀人</li>
          <li>警察验人</li>
          <li>狙击狙人</li>
          <li>医生救人</li>
@@ -39,5 +39,6 @@
      </ul>
  </div>
 </div>
+<script type="text/javascript" src="js/js-task4-2.js"></script>
 </body>
 </html>
