--- a/js-task4/js-task4-4.html
+++ b/js-task4/js-task4-4.html
@@ -18,7 +18,9 @@
     </header>
 
     <div class="main">
-        <p>发言讨论结束，大家请投票</p>
+        <p>
+            发言讨论结束，大家请投票
+        </p>
 
         <audio controls="controls" id="music" preload hidden src="music/Kent.mp3"></audio>
         <button id="a" onclick="a();">
@@ -41,137 +43,32 @@
     <div class="triangle-botom"></div>
     <p class="p1">点击得票数最多人的头像</p>
 
-    <div class="vote">
-        <div class="container">
-            <div class="card">
-                <p class="p2">水民</p>
-                <p class="p3">1号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">水民</p>
-                <p class="p3">2号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">警察</p>
-                <p class="p3">3号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">法官</p>
-                <p class="p3">4号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">狙击手</p>
-                <p class="p3">5号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">医生</p>
-                <p class="p3">6号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">杀手</p>
-                <p class="p3">7号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">水民</p>
-                <p class="p3">8号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <div class="card">
-                <p class="p2">水民</p>
-                <p class="p3">9号</p>
-            </div>
-            <ul>
-                <li class="icon4"></li>
-                <li class="icon5"></li>
-                <li class="icon6"></li>
-                <li class="icon7"></li>
-            </ul>
-        </div>
+    <div class="vote" id="vote">
+        <!--<div class="container">-->
+        <!--<div class="card">-->
+        <!--<p class="p2 bgcolor-active">水民</p>-->
+        <!--<p class="p3">1号</p>-->
+        <!--</div>-->
+        <!--<ul>-->
+        <!--<li class="icon4"></li>-->
+        <!--<li class="icon5"></li>-->
+        <!--<li class="icon6"></li>-->
+        <!--<li class="icon7"></li>-->
+        <!--</ul>-->
+        <!--</div>-->
     </div>
 </div>
-<footer style="position: static; border-top: none">
-    <a href="task6-2.html">
-        <div class="footer">投死</div>
-    </a>
+<footer style="position: static;opacity: 0">
+
+    <div class="footer">投死</div>
+
 </footer>
 
-<footer>
-    <a href="task6-2.html">
-        <div class="footer">投死</div>
-    </a>
+<footer id="btn" >
+
+    <div class="footer">投死</div>
+
 </footer>
-
-
+<script  type="text/javascript" src="js/js-task4-4.js"></script>
 </body>
 </html>
