--- a/js-task4/js-task4-6.html
+++ b/js-task4/js-task4-6.html
@@ -17,39 +17,28 @@
         <span class="tablecell">游戏结果</span>
         <span class="icon4"></span>
     </header>
-    <p class="victory">卧底胜利</p>
+    <p class="victory"><span id="identity"></span>胜利</p>
     <p class="p1">太棒了!你知道么？在捉鬼游戏中只有20%的卧底取得游戏最终的胜利哦！</p>
     <p class="p2">
-        <span>本次游戏共计用时0小时25分钟</span>
+        <span>杀&nbsp&nbsp手<span id="x"></span>人</span>
         <br>
-        <span>杀&nbsp&nbsp手<span>0</span>人</span>
-        <br>
-        <span>平&nbsp&nbsp民<span>6</span>人</span>
+        <span>平&nbsp&nbsp民<span id="y"></span>人</span>
     </p>
+<div id="dead-note">
+    <!--<div class="day1">-->
+        <!--<p>-->
+            <!--<span class="p3">第1天</span>-->
+            <!--<span class="p4">0小时07分</span>-->
+        <!--</p>-->
+        <!--<p class="p5">-->
+            <!--<span>晚上：5号被杀手杀死，5号是水民</span>-->
+            <!--<br>-->
+            <!--<span>白天：8号被全民投票投死，8号是杀手</span>-->
+        <!--</p>-->
+    <!--</div>-->
+</div>
 
-    <div class="day1">
-        <p>
-            <span class="p3">第1天</span>
-            <span class="p4">0小时07分</span>
-        </p>
-        <p class="p5">
-            <span>晚上：5号被杀手杀死，5号是水民</span>
-            <br>
-            <span>白天：8号被全民投票投死，8号是杀手</span>
-        </p>
-    </div>
 
-    <div class="day1">
-        <p>
-            <span class="p3">第2天</span>
-            <span class="p4">0小时07分</span>
-        </p>
-        <p class="p5">
-            <span>晚上：5号被杀手杀死，5号是水民</span>
-            <br>
-            <span>白天：8号被全民投票投死，8号是杀手</span>
-        </p>
-    </div>
 </div>
 <footer style="position: static;opacity: 0;">
     <a href="task6-1.html">
@@ -64,6 +53,6 @@
     </a>
     <button class="button-b2">上传并分享</button>
 </footer>
-
+<script type="text/javascript" src="js/js-task4-6.js"></script>
 </body>
 </html>
