--- a/js-task4/js-task4-6.html
+++ b/js-task4/js-task4-6.html
@@ -12,7 +12,7 @@
 <body>
 <div class="bg">
     <header>
-        <a href="task6-3.html" class="icon3">
+        <a href="js-task4-start.html" class="icon3">
         </a>
         <span class="tablecell">游戏结果</span>
         <span class="icon4"></span>
@@ -48,9 +48,7 @@
 </footer>
 
 <footer>
-    <a href="task6-1.html">
-        <button class="button-b1">再来一局</button>
-    </a>
+    <button class="button-b1" id="btn">再来一局</button>
     <button class="button-b2">上传并分享</button>
 </footer>
 <script type="text/javascript" src="js/js-task4-6.js"></script>
