--- a/js-task5/js-task5.html
+++ b/js-task5/js-task5.html
@@ -10,20 +10,52 @@
 <img class="background" src="images/background.jpg">
 
 <div class=" main">
-    <p>喝我水站后台登录</p>
-    <form method="post" action="" target="_blank">
+    <div class="nav">
+        <button id="login">登录</button>
+        <button id="signUp">注册</button>
+    </div>
+    <div id="show-login">
+    <form >
         <label>
             <img src="images/username.png">
-            <input type="text" name="username" placeholder="用户名" maxlength="15">
+            <input type="tel" id="mobile" name="mobile" placeholder="请输入手机号" maxlength="11">
         </label>
+
         <label >
             <img src="images/password.png">
-            <input type="password" name="password" placeholder="密码" maxlength="20">
+            <input type="password" id="pwd" name="pwd" placeholder="请输入密码" maxlength="20">
         </label>
 
-        <input id="submit" type="submit" value="登录">
+        <input id="submit1" type="button" value="登录">
     </form>
-</div>
+    </div>
+    <div id="show-signUp">
+        <form >
+            <label>
+                <img src="images/username.png">
+                <input type="tel" id="mobile-signup" name="mobile" placeholder="请输入手机号" maxlength="11">
+            </label>
 
+            <label>
+                <input type="text" id="captcha" class="input2" name="verify" placeholder="请输入右侧验证码" >
+                <img src="images/username.png" id="captcha-img" alt="验证码">
+            </label>
+
+            <label>
+                <input type="text" id="captcha2"  class="input2" name="verify" placeholder="请输入验证码" >
+                <input type="button" id="button-verify" value="短信获取">
+            </label>
+
+            <label >
+                <img src="images/password.png">
+                <input type="password" id="pwd-signup" name="pwd" placeholder="请输入由数字和字母组合的6-16位密码" minlength="6"  maxlength="20">
+            </label>
+
+            <input id="submit2" type="button" value="注册">
+        </form>
+    </div>
+</div>
 </body>
+<script src="js/js-task5.js" type="text/javascript" ></script>
+
 </html>
