--- a/js-task5-local/js-task5.html
+++ b/js-task5-local/js-task5.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="../js-task5-local1/css/js-task5.css">
-    <title>one-login</title>
+    <link rel="stylesheet" href="css/js-task5.css">
+    <title>后台登录</title>
 </head>
+
 <body>
-<img class="background" src="../js-task5-local1/images/background.jpg">
+
+<img class="background" src="images/background.jpg">
+
 <div class=" main">
     <div class="nav">
         <button id="login">登录</button>
         <button id="signUp">注册</button>
     </div>
     <div id="show-login">
-        <form >
-            <label>
-                <img src="../js-task5-local1/images/username.png">
-                <!--oninput函数，来确定最大字符为11个数字-->
-                <input type="number" id="mobile" name="mobile" placeholder="请输入手机号"  oninput="if(value.length>11)value=value.slice(0,11)">
-            </label>
+    <form >
+        <label>
+            <img src="images/username.png">
+            <!--oninput函数，来确定最大字符为11个数字-->
+            <input type="number" id="mobile" name="mobile" placeholder="请输入手机号"  oninput="if(value.length>11)value=value.slice(0,11)">
+        </label>
 
-            <label >
-                <img src="../js-task5-local1/images/password.png">
-                <input type="password" id="pwd" name="pwd" placeholder="请输入密码" minlength="6" maxlength="16">
-            </label>
+        <label >
+            <img src="images/password.png">
+            <input type="password" id="pwd" name="pwd" placeholder="请输入密码" minlength="6" maxlength="16">
+        </label>
 
-            <input id="submit1" type="button" value="登录">
-        </form>
+        <input id="submit1" type="button" value="登录">
+    </form>
     </div>
     <div id="show-signUp">
         <form >
             <label>
-                <img src="../js-task5-local1/images/username.png">
+                <img src="images/username.png">
                 <input type="number" id="mobile-signup" name="mobile" placeholder="请输入手机号"
                        oninput="if(value.length>11)value=value.slice(0,11)">
             </label>
 
             <!--<label>-->
-            <!--<input type="text" id="captcha" class="input2" name="verify" placeholder="请输入右侧验证码" >-->
-            <!--<img src="images/username.png" id="captcha-img" alt="验证码">-->
+                <!--<input type="text" id="captcha" class="input2" name="verify" placeholder="请输入右侧验证码" >-->
+                <!--<img src="images/username.png" id="captcha-img" alt="验证码">-->
             <!--</label>-->
 
             <label>
@@ -48,7 +51,7 @@
             </label>
 
             <label >
-                <img src="../js-task5-local1/images/password.png">
+                <img src="images/password.png">
                 <input type="password" id="pwd-signup" name="pwd" placeholder="请输入由数字和字母组合的6-16位密码" minlength="6"  maxlength="16">
             </label>
 
@@ -56,6 +59,9 @@
         </form>
     </div>
 </div>
-</body>
 <script src="js/js-task5.js" type="text/javascript" ></script>
+
+</body>
+
+
 </html>
