--- a/js-task6/main.html
+++ b/js-task6/main.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <title></title>
-    <script src="js/jquery-3.1.1.js"></script>
-    <script src="js/angular.js"></script>
+    <!--<script src="js/jquery-3.1.1.js"></script>-->
+    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
+    <script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
+    <!--<script src="js/angular.js"></script>-->
     <script src="js/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body data-ng-app="myApp">
+
 <div data-ui-view=""></div>
 </body>
 <html>
