--- a/js-task6/Page2.html
+++ b/js-task6/Page2.html
@@ -1,9 +1,53 @@
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
+    <link href="http://how2j.cn/study/css/bootstrap/3.3.6/bootstrap.min.css" rel="stylesheet">
+    <script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js"></script>
+    <!--<script src="js/angular.js"></script>-->
+    <script src="https://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
+    <script src="js/form.js"></script>
+    <title>表单</title>
+</head>
+<body>
+<div ng-app="myApp" ng-controller="formCtrl">
+<table class="table table-striped table-bordered table-hover  table-condensed">
+    <thead>
+    <th>id</th>
+    <th>name</th>
+    <th>qq</th>
+    <th>type</th>
+    <th>school</th>
+    <th>talent</th>
+    <th>level</th>
+    <th>joinTime</th>
+    <th>wish</th>
+    <th>updateAt</th>
+    <th>createAt</th>
+    </thead>
 
-    <div>
+    <tbody>
+    <tr ng-repeat="x in names">
 
-        <h1>Page 2 content goes here...</h1>
+        <td> {{x.id}}</td>
+        <td> {{x.name}}</td>
+        <td> {{x.qq}}</td>
+        <td> {{x.type}}</td>
+        <td> {{x.school}}</td>
+        <td> {{x.talent}}</td>
+        <td> {{x.level}}</td>
+        <td> {{x.joinTime}}</td>
+        <td> {{x.wish}}</td>
+        <td> {{x.updateAt}}</td>
+        <td> {{x.createAt}}</td>
 
-    </div>
+    </tr>
+    </tbody>
+</table>
 
 </div>
+</body>
+
+</html>
