--- a/hsh/hsh.html
+++ b/hsh/hsh.html
@@ -75,8 +75,8 @@
           <a href="../js-task2/js-task2.html" target="_Blank"><i class="icon iconfont">&#xe608;</i></a>
           <a href="../js-task3/js-task3.html" target="_Blank"><i class="icon iconfont">&#xe601;</i></a>
           <a href="../js-task4/js-task4-1.html" target="_Blank"><i class="icon iconfont">&#xe602;</i></a>
-          <a href="../task5/task5-1.html" target="_Blank"><i class="icon iconfont">&#xe605;</i></a>
-          <a href="../task6/task6-3.html" target="_Blank"><i class="icon iconfont">&#xe609;</i></a>
+          <a href="../js-task5-online/js-task5.html" target="_Blank"><i class="icon iconfont">&#xe605;</i></a>
+          <a href="../js-task6/one-login.html" target="_Blank"><i class="icon iconfont">&#xe609;</i></a>
           <a href="../task7/task7-1.html" target="_Blank"><i class="icon iconfont">&#xe60a;</i></a>
           <a href="../task8/task8.html" target="_Blank"><i class="icon iconfont">&#xe604;</i></a>
           <a href="../task9/task9.html" target="_Blank"><i class="icon iconfont">&#xe607;</i></a>
