--- a/js-task6/Page4.html
+++ b/js-task6/Page4.html
@@ -1,9 +1,47 @@
 <div>
 
-    <div>
-
-        <h1>Page 4 content goes here...</h1>
+    <div class="input-group">
+        <span class="tablecell">昵称</span>
+        <input type="text" class="form-control" placeholder="用户名" >
+    </div>
+    <div class="input-group">
+        <span class="tablecell">性别</span>
+        <select class="form-control">
+            <option>男</option>
+            <option>女</option>
+        </select>
+    </div>
+    <div class="input-group">
+        <span class="tablecell">生日</span>
+        <input type="text" class="form-control" placeholder="1988" >
+        <span class="tablecell">年</span>
+        <input type="text" class="form-control" placeholder="8" >
+        <span class="tablecell">月</span>
+        <input type="text" class="form-control" placeholder="29" >
+        <span class="tablecell">日</span>
+    </div>
+    <div class="input-group">
+        <span class="tablecell">Q Q</span>
+        <input type="text" class="form-control"  >
+    </div>
+    <div class="input-group">
+        <span class="tablecell">院校</span>
+        <input type="text" class="form-control" placeholder="清华大学" >
+    </div>
+    <div class="input-group">
+        <span class="tablecell">城市</span>
+        <input type="text" class="form-control" placeholder="省份" >
+        <span class="tablecell"> </span>
+        <input type="text" class="form-control" placeholder="城市" >
 
     </div>
+    <div class="input-group">
+        <span class="tablecell">签名</span>
+        <textarea  class="form-control"></textarea>
+    </div>
+
+
+
+
 
 </div>
