--- a/js-task6/Page3.html
+++ b/js-task6/Page3.html
@@ -1,9 +1,10 @@
 <div>
 
     <div>
-
-        <h1>Page 3 content goes here...</h1>
-
+        <form id="myForm" name="myForm">
+            <input type="file" name="userfile"><input type="submit" value="上传">
+        </form>
+        <img>
     </div>
 
 </div>
